added layout and database connectivity.

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -1,8 +1,12 @@
 [routes]
 GET /=IndexCtrl->index
 GET /about=IndexCtrl->about
+GET /login=IndexCtrl->login
+POST /do-login=IndexCtrl->doLogin
+
 GET /blog=BlogCtrl->index
 GET /blog/@post_id=BlogCtrl->show
+
 GET /posts=PostsCtrl->index
 GET /posts/add=PostsCtrl->add
 GET /posts/@post_id=PostsCtrl->edit
