updated session schema and finalized login.

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -2,6 +2,7 @@
 GET /=IndexCtrl->index
 GET /about=IndexCtrl->about
 GET /login=IndexCtrl->login
+GET /do-logout=IndexCtrl->doLogout
 POST /do-login=IndexCtrl->doLogin
 
 GET /blog=BlogCtrl->index
