added posts CRUD UI and routing.

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -2,12 +2,17 @@
 GET /=IndexCtrl->index
 GET /about=IndexCtrl->about
 GET /login=IndexCtrl->login
+GET /portfolio=IndexCtrl->portfolio
+
 GET /do-logout=IndexCtrl->doLogout
 POST /do-login=IndexCtrl->doLogin
 
 GET /blog=BlogCtrl->index
-GET /blog/@post_id=BlogCtrl->show
+GET /blog/@title/@id=BlogCtrl->show
 
 GET /posts=PostsCtrl->index
 GET /posts/add=PostsCtrl->add
-GET /posts/@post_id=PostsCtrl->edit
+GET /posts/@id=PostsCtrl->edit
+GET /posts/delete/@id=PostsCtrl->delete
+
+POST /posts/save=PostsCtrl->save
