added comments admin, abstracted many controller CRUD functions to base and added wysiwyg editor for posts.

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -14,5 +14,11 @@ GET /posts=PostsCtrl->index
 GET /posts/add=PostsCtrl->add
 GET /posts/@id=PostsCtrl->edit
 GET /posts/delete/@id=PostsCtrl->delete
-
 POST /posts/save=PostsCtrl->save
+
+GET /comments=CommentsCtrl->index
+GET /comments/post/@post_id=CommentsCtrl->index
+GET /comments/add=CommentsCtrl->add
+GET /comments/@id=CommentsCtrl->edit
+GET /comments/delete/@id=CommentsCtrl->delete
+POST /comments/save=CommentsCtrl->save
